--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hunorkelemen.github.io/TattooPage",
+  "homepage": "http://hunorkelemen.github.io/Tattoo-Site",
   "name": "tattoo-app",
   "version": "0.1.0",
   "private": true,
